--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,3 @@
-#ETL Pipeline
 name: github action demo pipeline
 
 on:
@@ -9,24 +8,26 @@ on:
 jobs:
   extract-data:
     runs-on: ubuntu-latest
-    steps: 
-      - name: checkout code
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: run extract.py
+      - name: Run extract.py
         run: python extract.py
+
   transform-data:
     runs-on: ubuntu-latest
     needs: extract-data
-    steps: 
-      - name: checkout code
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: run transform.py
+      - name: Run transform.py
         run: python transform.py
+
   load-data:
-    runs-on: checkout code
+    runs-on: ubuntu-latest
     needs: transform-data
-    steps: 
-      - name: checkout code
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: run load.py
+      - name: Run load.py
         run: python load.py
